--- a/puerto-rico-food-tracker/package.json
+++ b/puerto-rico-food-tracker/package.json
@@ -1,31 +1,26 @@
 {
-  "homepage": "https://plpk.github.io/puerto-rico-food-tracker",
   "name": "puerto-rico-food-tracker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://plpk.github.io/puerto-rico-food-tracker",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "lucide-react": "^0.454.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
     "gh-pages": "^6.2.0",
-    "globals": "^15.11.0",
-    "vite": "^5.4.10"
+    "vite": "^4.4.5"
   }
 }
